[package]
name = "ndk-logger"
version = "0.0.2"
authors = ["Jarod Liu <liuyuanzhi@gmail.com>"]
description = """
A library bridging [log](https://crates.io/crates/log) message to [Android NDK log](https://developer.android.com/ndk/reference/log_8h.html).
"""
readme = "README.md"
documentation = "https://docs.rs/ndk-logger/"
homepage = "https://github.com/jarod/ndk-logger"
repository = "https://github.com/jarod/ndk-logger"
license = "MIT"
keywords = ["logger", "log"]
categories = ["development-tools::debugging"]
links = "log"

[lib]
name = "ndk_logger"

[dependencies]
log = {version="0.4", features=["std"]}